border spacing fix

--- a/public/applications/weather/css/big.css
+++ b/public/applications/weather/css/big.css
@@ -42,7 +42,7 @@ html,body {
 
 .forecast{
 	width:90%; 
-	border-spacing:30px;
+	border-spacing:25px;
 	margin: 0 auto;
 	font-size: 20px;
 }
